template/04-apps/metube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: app-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: metube.lab-hc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 80
